fix: link and code block word wrap

--- a/assets/styles/support/global.scss
+++ b/assets/styles/support/global.scss
@@ -16,6 +16,12 @@ body {
   position: relative;
 }
 
+pre,
+code,
+tt {
+  font-family: $font-family-mono;
+}
+
 // sticky footer
 .header,
 .footer {
